--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ install(
 # Install Python executables
 install(PROGRAMS
   scripts/hoverboard_bridge_node.py
+  scripts/lidar_scan_guard.py
 
   DESTINATION lib/${PROJECT_NAME}
 )
