--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ install(
 install(PROGRAMS
   scripts/hoverboard_bridge_node.py
   scripts/lidar_scan_guard.py
+  scripts/imu_bridge.py
 
   DESTINATION lib/${PROJECT_NAME}
 )
