--- a/config/ekf.yaml
+++ b/config/ekf.yaml
@@ -1,43 +1,29 @@
 ekf_filter_node:
-  frequency: 30.0
-  two_d_mode: true
-  map_frame: map
-  odom_frame: odom
-  base_link_frame: base_link
-  world_frame: odom
+  ekf_filter_node:
+    ros__parameters:
+      frequency: 30.0
+      two_d_mode: true
+      map_frame: map
+      odom_frame: odom
+      base_link_frame: base_link
+      world_frame: odom
 
-  # Wheel odom (from your Arduino bridge)
-  odom0: /wheel/odom
-  odom0_config: [true, true, false,   # x y z
-                 false, false, true,  # roll pitch yaw (only yaw)
-                 true, true, false,   # vx vy vz
-                 false, false, true,  # vroll vpitch vyaw
-                 false, false, false] # ax ay az
-  odom0_differential: false
-  odom0_relative:    false
+      odom0: /wheel/odom
+      odom0_config: [true, true, false, false, false, true, true, true, false, false, false, true, false, false, false]
+      odom0_differential: false
+      odom0_relative: false
 
-  # IMU from MAVROS (use filtered orientation topic if available; else /mavros/imu/data)
-  imu0: /mavros/imu/data
-  imu0_remove_gravitational_acceleration: true
-  imu0_config: [false, false, false,
-                false, false, true,    # yaw from IMU
-                false, false, false,
-                false, false, true,    # yaw rate
-                true,  true,  true]    # ax ay az (optional)
+      imu0: /mavros/imu/data
+      imu0_remove_gravitational_acceleration: true
+      imu0_config: [false, false, false, false, false, true, false, false, false, false, false, true, true, true, true]
 
-  # GPS (position + velocity) -> use MAVROS local ENU if available
-  gps0: /mavros/global_position/local     # (ENU position/vel from ArduPilot EKF)
-  gps0_config: [true, true, false,    # x y from GPS
-                false, false, false,
-                true,  true,  false,  # vx vy from GPS
-                false, false, false,
-                false, false, false]
-  gps0_differential: false
+      gps0: /mavros/global_position/local
+      gps0_config: [true, true, false, false, false, false, true, true, false, false, false, false, false, false, false]
+      gps0_differential: false
 
-  # Optional covariances (tune later)
-  process_noise_covariance: [0.05, 0, 0,  0, 0, 0,
-                             0, 0.05, 0,  0, 0, 0,
-                             0, 0, 1e6,   0, 0, 0,
-                             0, 0, 0,     1e6, 0, 0,
-                             0, 0, 0,     0, 1e6, 0,
-                             0, 0, 0,     0, 0, 0.03]
+      process_noise_covariance: [0.05, 0.0, 0.0, 0.0, 0.0, 0.0,
+                                 0.0, 0.05, 0.0, 0.0, 0.0, 0.0,
+                                 0.0, 0.0, 1e6, 0.0, 0.0, 0.0,
+                                 0.0, 0.0, 0.0, 1e6, 0.0, 0.0,
+                                 0.0, 0.0, 0.0, 0.0, 1e6, 0.0,
+                                 0.0, 0.0, 0.0, 0.0, 0.0, 0.03]
